@@ -4,6 +4,11 @@ Changelog
 1.1.8 - unreleased
 ------------------
 
+- Fix the addContext in the FactoriesSubMenuItem to make it possible to add
+  content to a folderish object that set as the default view on its parent folder.
+  This closes http://dev.plone.org/plone/ticket/9057.
+  [WouterVH]
+
 
 1.1.7 - 2009-03-07
 ------------------
